Backport to 1.21.1