@@ -21,14 +21,12 @@ import de.blukae.badores.util.ArmorInfo;
 import de.blukae.badores.util.ToolInfo;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Holder;
-import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.SoundSource;
 import net.minecraft.tags.BlockTags;
 import net.minecraft.util.valueproviders.IntProvider;
 import net.minecraft.util.valueproviders.UniformInt;
 import net.minecraft.world.entity.Entity;
-import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.NoteBlock;
@@ -45,21 +43,15 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class Amadeum implements OreTemplate {
-    public static final List<Holder<SoundEvent>> SOUNDS = Arrays.stream(NoteBlockInstrument.values())
+    private static final List<Holder<SoundEvent>> SOUNDS = Arrays.stream(NoteBlockInstrument.values())
             .filter(NoteBlockInstrument::isTunable)
             .map(NoteBlockInstrument::getSoundEvent)
-            .collect(Collectors.toList());
+            .toList();
 
-    public static void playRandomSound(Level level, Vec3 pos) {
+    private static void playRandomSound(Level level, Vec3 pos) {
         float pitch = NoteBlock.getPitchFromNote(level.random.nextInt(25));
         Holder<SoundEvent> sound = SOUNDS.get(level.random.nextInt(SOUNDS.size()));
         level.playSound(null, pos.x(), pos.y(), pos.z(), sound, SoundSource.BLOCKS, 3.0F, pitch);
-    }
-
-    public static void playRandomItemSound(Level level, Entity entity) {
-        if (level.random.nextInt(200) == 0) {
-            playRandomSound(level, entity.position());
-        }
     }
 
     @Override
@@ -100,7 +92,9 @@ public class Amadeum implements OreTemplate {
     }
 
     @Override
-    public void onInventoryTick(ItemStack stack, ServerLevel level, Entity entity, EquipmentSlot slot) {
-        playRandomItemSound(level, entity);
+    public void onInventoryTick(ItemStack stack, Level level, Entity entity, int slotId, boolean isSelected) {
+        if (!level.isClientSide() && level.random.nextInt(200) == 0) {
+            playRandomSound(level, entity.position());
+        }
     }
 }
